pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-non-object-element.ub
factory: {
  state-moves: [
    'core.thing@resource.old'
  ]
}
